# national-mining-lulc-carbon-skill

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md
arcgis_steps/: cartographic_outputs.md  pim_wdat_to_subsidence_raster.md
config/: data_sources.md  landuse_classes.md  llm_provider.example.json  local_paths.example.json  mine_type_rules.md  plus_v142_ui_profile.example.json
deep_learning/: pytorch_workflow.md
docs/: agent_input_contract.md  llm_copilot.md  plus_v142_gui_automation.md  task_modes.md
ecosystem_service/: ecosystem_service_workflow.md  invest_water_yield_habitat_workflow.md
execution/: software_adapters.md
interfaces/: backend_protocol.md  backend_registry.example.json
invest_carbon/: carbon_density_rules.md  invest_workflow.md  result_validation.md  subsidence_water_carbon.md
mcp_server/: mining_mcp_server.py  pyproject.toml
plus_model/: calibration_validation.md  conversion_rules.md  driver_factors.md  gui_lifecycle.md  pim_subsidence_driver.md  plus_workflow.md  scenario_setting.md
schemas/: maesa_execution_plan.schema.json
scripts/: analysis_validation.py  arcgis_ops.py  assemble_validation_evidence.py  ecosystem_backend.py  ecosystem_service.py  envi_backend.py  geodetector_spatial_samples.py  invest_ecosystem_contract.py  job_manager.py  maesa_copilot.py  plus_backend.py  plus_v142_elevated_worker.ps1  plus_v142_gui_bridge.py  project_backend.py  project_builder.py  project_validator.py  project_workflow.py  pytorch_backend.py  pytorch_patch_lulc.py  raster_grid.py  scenario_service_table.py  (+8 more)
(+67 files in other folders)
