[project]
name = "mining-gis-mcp"
version = "0.1.0"
description = "Local-first MCP tools for mining-area GIS workflows"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.2,<2"]

[project.optional-dependencies]
validation = ["numpy>=1.26,<3", "rasterio>=1.3,<1.5", "jsonschema>=4,<5"]
pytorch = ["numpy>=1.26,<3", "torch>=2.4,<2.8", "torchvision>=0.19,<0.23", "rasterio>=1.3,<1.5"]
plus-gui = ["numpy>=1.26,<3", "pywinauto>=0.6.9,<0.7", "Pillow>=10,<12", "opencv-python-headless>=4.10,<5"]
dev = ["pytest>=8,<9"]

[project.scripts]
mining-gis-mcp = "mining_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mining_mcp_server.py"]
